[package]
name = "power_systems"
version = "0.1.0"
description = "Structures for power system modeling, simulation and analysis"
license = "BSD-3-Clause"
edition = "2021"

[dependencies]
num-complex = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[build-dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
gtmpl = "0.7"
gtmpl_derive = "0.5"
gtmpl_value = "0.5"
convert_case = "0.6"